maxima.jar build instructions